# deepin-downloader

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  config.h.cmake  groups  project.config  translate_generation.sh  webExtensions.pem
.reuse/: dep5
.tx/: config
cmake/: translation-generate.cmake
data/: uos-downloadmanager-task.db
debian/: changelog  control  control.1  copyright  downloader.install  downloader.postinst  downloadmanager.install  files  org.deepin.downloader.install  org.deepin.downloader.manpages  org.deepin.downloader.postinst  rules
debian/.debhelper/downloader/: dbgsym-build-ids
debian/downloader/DEBIAN/: control  md5sums
debian/source/: format
desktop/: dlmExtensionService.desktop  dlmextensionservice.desktop  downloader.desktop  downloadmanager.desktop
desktop/auto-desktop/: Downloader.desktop  downloader.desktop  downloadmanager.desktop  uos-downloadmanager.desktop
docs/: aria2.conf  browser.downloader.autostart.json  content-type.conf  startdlmservice.sh
downloaderExtensions/: background.js  manifest.json  popup.html  thunder.js
downloaderExtensions/_locales/en/: messages.json
downloaderExtensions/_locales/zh_CN/: messages.json
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h  install_manifest.txt
obj-x86_64-linux-gnu/src/: Makefile  cmake_install.cmake
obj-x86_64-linux-gnu/src/src/: Makefile  cmake_install.cmake
obj-x86_64-linux-gnu/translations/: Makefile  cmake_install.cmake
rpm/: downloader.spec
src/: README.md
src/downloaderExtensions/: background.js  manifest.json
src/include/aria2/: aria2cbtinfo.h  aria2const.h  aria2rpcinterface.h
src/include/database/: database.h  dbdefine.h  dbinstance.h
src/include/downloader/: accessiblewidget.h
src/include/extensionService/: extensionservice.h  websockethandle.h  websockettransport.h
src/src/: CMakeLists.txt
src/src/Downloader/: CMakeLists.txt  main.cpp
src/src/aria2/: CMakeCache.txt  CMakeLists.txt  aria2cbtinfo.cpp  aria2rpcinterface.cpp
src/src/database/: CMakeLists.txt  database.cpp  dbdatacontrol.cpp  dbinstance.cpp
src/src/downloader/: CMakeLists.txt  accessiblewidget.cpp  main.cpp
src/src/downloadmanager/: CMakeLists.txt  main.cpp
src/src/extensionService/: CMakeLists.txt  extensionservice.cpp  extensionservice.h  main.cpp  websocketclientwrapper.cpp  websockethandle.cpp  websockettransport.cpp
src/src/src/aria2/: CMakeLists.txt
src/src/ui/: CMakeLists.txt  Makefile  UrlThread.cpp  analysisurl.cpp  aria2method.cpp  basicsettingwidget.cpp  btheaderview.cpp  btinfodelegate.cpp  btinfodialog.cpp  btinfodialog.cpp.autosave  btinfotableview.cpp  clipboardtimer.cpp  clipboardtimer.h  createtaskwidget.cpp  deleteitemthread.cpp  diagnostictool.cpp  dlmapplication.cpp  downloadsettingwidget.cpp  filesavepathchooser.cpp  func.cpp  groupselectionwidget.cpp  headerView.cpp  images.qrc  itemDelegate.cpp  itemDelegate.cpp.autosave  itemselectionwidget.cpp  mainframe.cpp  messagebox.cpp  monitoringsettingwidget.cpp  newtaskwidget.cpp  notificationssettiingwidget.cpp  notificationssettiingwidget.h  queryurl.cpp  settinginfoinputwidget.cpp  settings.cpp  settingslabel.cpp  settingswidget.cpp  tableModel.cpp  tableView.cpp  tabledatacontrol.cpp  (+3 more)
src/src/ui/createTask/: analysisurl.cpp  btheaderview.cpp  btinfodelegate.cpp  btinfodialog.cpp  btinfotableview.cpp  createtaskwidget.cpp  taskModel.cpp  taskdelegate.cpp  urlthread.cpp
src/src/ui/images/: images.qrc
src/src/ui/images/json/: settings.json
src/src/ui/images/qm/: downloadmanager.qm
src/src/ui/mainFrame/: deleteitemthread.cpp  headerView.cpp  itemDelegate.cpp  mainframe.cpp  searchresoultwidget.cpp  tableModel.cpp  tableView.cpp  tabledatacontrol.cpp  topButton.cpp
src/src/ui/resource/: resource.qrc
src/src/ui/resource/icon/: list_delete.dci  list_download.dci  print_done.dci
src/src/ui/resource/json/: settings.json
src/src/ui/settings/: diagnostictool.cpp  downloadsettingwidget.cpp  filesavepathchooser.cpp  groupselectionwidget.cpp  httpadvancedsettingwidget.cpp  itemselectionwidget.cpp  notificationssettiingwidget.cpp  settinginfoinputwidget.cpp  settings.cpp  settingslabel.cpp  settingswidget.cpp  timeEdit.cpp
src/translations/: downloadmanager.ts
test/: CMakeLists.txt  main.cpp  stubAll.cpp  stubAll.h
test/aria2/: ut_aria2rpcinterface.cpp
test/database/: ut_database.cpp  ut_dbinstance.cpp
test/log/: ut_log.cpp
test/test/database/: CMakeLists.txt  database.cpp  dbinstance.cpp
test/test/ui/: CMakeLists.txt
test/ui/: ut_func.cpp  ut_messagebox.cpp
test/ui/createTask/: ut_createtaskwidget.cpp
test/ui/mainFrame/: ut_mainframe.cpp
test/ui/settings/: ut_settings.cpp
tests/: CMakeLists.txt  cmake-lcov-test.sh  main.cpp  qt_event_helper.h  stub.h  stubAll.cpp  stubAll.h  test-prj-running.sh
tests/aria2/: ut_aria2rpcinterface.cpp
tests/database/: ut_database.cpp  ut_dbinstance.cpp
tests/log/: ut_log.cpp
tests/ui/: ut_clipboardTimer.cpp  ut_func.cpp  ut_messagebox.cpp
translations/:  downloadmanager.ts  Downloader_zh_CN.ts  downloader.ts  downloader_ady.ts  downloader_af.ts  downloader_am_ET.ts  downloader_ar.ts  downloader_ast.ts  downloader_az.ts  downloader_bg.ts  downloader_bn.ts  downloader_bo.ts  downloader_bqi.ts  downloader_br.ts  downloader_ca.ts  downloader_cs.ts  downloader_da.ts  downloader_de.ts  downloader_el.ts  downloader_en_US.ts  downloader_eo.ts  downloader_es.ts  downloader_et.ts  downloader_eu.ts  downloader_fa.ts  downloader_fi.ts  downloader_fil.ts  downloader_fr.ts  downloader_gl_ES.ts  downloader_he.ts  downloader_hi_IN.ts  downloader_hr.ts  downloader_hu.ts  downloader_hy.ts  downloader_id.ts  downloader_it.ts  downloader_ja.ts  downloader_ka.ts  downloader_kab.ts  downloader_km_KH.ts  (+43 more)
translations/desktop/: desktop.ts  desktop_ar.ts  desktop_ast.ts  desktop_cs.ts  desktop_de.ts  desktop_es.ts  desktop_hi_IN.ts  desktop_ja.ts  desktop_kab.ts  desktop_ko.ts  desktop_lo.ts  desktop_lt.ts  desktop_ms.ts  desktop_pl.ts  desktop_pt_BR.ts
webExtensions/: background.js  manifest.json
(+165 files in other folders)
